--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
+<% @items.each do |i| %>
+  <%= link_to i.name, i %> <br/>
+<% end %>
 
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
