--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,11 @@
-<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
 
+<% if user_signed_in? %>
+	Hello, <%= link_to current_user.name, current_user %>
+<% else %>
+	<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+<% end %>
+
+<br/>
 <%= link_to "SELL", new_item_path %> <br/>
 
 
