--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <%= @user.name %>
+<%= image_tag @user.image %>
+<%= @user.location %>
 
 <%= link_to 'Edit', edit_user_registration_path(@user) %>
 
