--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,11 +6,13 @@
 <% end %>
 
 <br/>
-<%= link_to "SELL", new_item_path %> <br/>
 
+<%= link_to "SELL", new_item_path, :class => "btn" %> <br/>
 
 <h1>Find your community</h1>
 
+<div class="row">
 <% @groups.each do |g| %>
-  <%= link_to g.name, g %> <br/>
+	  <div class="group_tile"><%= g.name %><%= link_to image_tag(g.avatar.url(:medium)), g %></div> 
 <% end %>
+</div>
