improved item form

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -7,9 +7,11 @@
 
 <br/>
 
-<%= link_to "SELL", new_item_path, :class => "btn" %> <br/>
+<%= link_to "SELL", new_item_path, :class => "btn" %> <br/> 
 
-<h1>Find your community</h1>
+or
+
+<h1>BUY in your community</h1>
 
 <div class="row">
 <% @groups.each do |g| %>
