--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,20 +2,19 @@ html, body {
 	height: 100%;
 }
 
-#wrap {
-    min-height: 100%;
-    height: auto !important;
-}
 
 body { 
 	padding-top: 60px;
 	margin-top: 20px;
  }
 
+html, body, p, h1, h2, h3, a, span, div {
+	font-family: "Helvetica Neue";
+}
 .group_tile {
 	position: relative;
 	height: 165px;
-	width: 315px;
+	width: 280px;
 	overflow: hidden;
 	float: left;
 	margin: 0 25px 25px 0;
@@ -23,4 +22,19 @@ body {
 
 .field {
 	list-style: none;
+}
+
+.fb_login {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+a:hover {
+	color: black !important;
+
+}
+
+.big_user_photo {
+	width: 120px;
+	height: 120px;
 }
