got large image from user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
 
 <div>
-	<%= image_tag (@user.image), :class => "big_user_photo" %>
+	<%= image_tag (@user.large_image) %>
 </div>
 
 <%= @user.name %>
