beginning of nice user page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,3 +38,14 @@ a:hover {
 	width: 180px;
 	height: 175px;
 }
+
+.circular {
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+}
+
+.user_info {
+	margin-bottom: 50px;
+}
+
