--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,11 +8,11 @@
 
 <% unless @user.items.empty? %>
 
-	<h2>Here's what I'm selling</h2>
+	<h2 align="center">Here's what I'm selling</h2>
 
-	<div class="row">
+	<div class="row user_items">
 	<% @user.items.each do |i| %>
-		  <div class="item_tile"><strong><%= g.name %></strong><%= link_to image_tag(i.avatar.url(:medium)), i %></div> 
+		  <div class="item_tile"><div class="item_name"><%= i.name %></div><%= link_to image_tag(i.avatar.url(:medium)), i %></div> 
 	<% end %>
 	</div>
 
