--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,8 +8,8 @@
 				<div class="item_row_info">
 					<%= link_to i.name, i, :class => "item_row_title" %>
 					<div class="item_row_description">
-						<%= i.reason %> <br/>
-						<%= i.story %>
+						<strong>Why I'm selling it:</strong> <%= i.reason %> <br/>
+						<strong>Most awesome story about this item:</strong> <%= i.story %>
 					</div>
 				</div>
 				<div class="mini_profile">
