--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -192,3 +192,15 @@ a:hover {
 .navbar.navbar-inner {
 	background-color: #3F454F !important;
 }
+
+.logo {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	font-size: 30px;
+}
+
+.right {
+	float: right;
+}
+
+
