--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="nav pull-left brand"><%= link_to "Market", root_path %></div>
+<div class="nav pull-left logo"><%= link_to "BuyCerca", root_path %></div>
 <% if user_signed_in? %>
 	<div class="nav pull-right">
 		<%= link_to current_user do %>
