--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New listing in <%= @group.name %></h1>
 
-<%= render 'form' %>
-
+<div id="new_item">
+	<h1>New listing in <%= @group.name %></h1>
+	<%= render 'form' %>
+</div>
